css/style.css
/* ... */
@media(max-width: 875px) {
  .whitespace_form-section-text {
    white-space: normal;
  }
}

@media (max-width: 850px) {
  .service-section__text {
    font-size: 20px;
    max-width: 600px;
    left: 13px;
    white-space: normal;
  }
  .advantages-item__text {
    font-size: 18px;
    max-width: 310px;
  }
  .business-goal__title {
    font-size: 19px;
  }
  .business-goal__desc {
    font-size: 15px;
  }
  .info-section__desc {
    margin-bottom: 20px;
    flex-direction: column;
  }
  .orange-box_info {
    transform: translateX(0);
  }
  .loss-item__title {
    max-width: 290px;
  }
  .slider-cases__item-text, .slider-cases__item-results-list-item {
    font-size: 14px;
  }
  .slider-cases__item-img {
    width: 320px;
  }
  .form-service__box {
    margin-right: 17px;
    padding: 36px 34px 50px 35px;
  }
  .form-service__box-left {
    margin-right: 35px;
  }
  
  .service-title_form-service {
    font-size: 20px;
    max-width: 450px;
  }
  .form-section__text_service {
    max-width: 298px;
    font-size: 18px;
  }
}
@media (min-width: 769px) {
  .slider-cases__item-img-mobile {
    display: none;
  }
}
@media (max-width: 768px) {
  .form-service__box_open {
    width: 80%;
  }
  .container {
    width: 95%;
  }
  .advantages-item__text {
    font-size: 17px;
    max-width: 270px;
  }
  .stage-item__title {
    font-size: 19px;
  }
  .service-title_loss {
    margin-bottom: 20px;
  }
  .service-title_perspective {
    font-size: 18px;
  }
  .loss-item {
    padding: 10px 0px;
  }
  .loss-item__title {
    font-size: 16px;
    margin-right: 15px;
  }
  .loss-item__text {
    font-size: 15px;
  }
  .loss-item__arrow-box {
    width: 53px;
    height: 15px;
    margin-right: 25px;
  }
  .loss-item__arrow-box img {
    width: 23px;
    height: 8.5px;
  }
  .slider-cases__item-desc {
    padding-left: 0;
    border-left: none;
  }
  .slider-cases__item-img {
    display: none;
  }
  .slider-cases__item-img-mobile {
    border-radius: 20px;
    margin-bottom: 10px;
    width: 100%;
    height: 270px;
    object-fit: cover;
    object-position: center;
  }
  .form-service {
    width: 100%;
  }
  .form-service__box {
    flex-direction: column;
    align-items: flex-start;
  }
  .form-service__box-left {
    margin-right: 0;
  }
  .form-service__input-box {
    width: 100%;
    margin-bottom: 15px;
  }
  
  .form-section__text_service {
    max-width: 100%;
  }
}
@media (max-width: 768px) and (min-width: 390px) {
  .slider-cases__item-img-mobile {
    height: 270px;
    object-fit: cover;
    object-position: center;
  }
}
@media (max-width: 720px) {
  .business-goal {
    padding: 14px;
  }
  .business-goal__title {
    font-size: 17px;
  }
  .business-goal__desc {
    font-size: 14px;
  }
}
@media (max-width: 700px) {
  .loss-item__title {
    margin-right: 0px;
    margin-bottom: 5px;
    max-width: 100%;
    width: 500px;
  }
  .loss-item__desc {
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
  }
  .loss-item__desc-box {
    width: 100%;
    justify-content: flex-start;
    align-items: flex-start;
  }
  .loss-item__text {
    width: 450px;
    max-width: 100%;
  }
  .loss-item__arrow-box {
    margin-right: 5px;
    transform: translateY(2px);
  }
}

@media (max-width: 650px) {
  
  .btn_form-service {
    width: 100%;
  }
  .advantages-item:not(:last-child) {
    margin-right: 20px;
  }
  .advantages-item__text {
    font-size: 16px;
    max-width: 245px;
  }
  .stage-item__title {
    font-size: 17px;
  }
  .stage-item__number {
    font-size: 185px;
    top: -18px;
  }
  .form-section__img {
    display: none;
  }
  .perspective-section__img {
    display: none;
  }
  .service-title_form {
    max-width: 415px;
  }
  .slider-cases__btn-box {
    height: 55px;
    top: 5px;
  }
  .btn_slider-link {
    height: 48px;
    padding: 9px 19px;
  }
  .btn_slider-link::after {
    width: 25px;
    height: 25px;
  }
  .form-service__close-btn {
    border: none;
    background: transparent;
    color: #D6DADD;
    font-size: 22px;
    padding: 0;
    position: absolute;
    right: 15px;
    top: 10px;
  }
}
/* ... */

